2010-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add infrastructure for component testing.

	* common: Prepend ‘PATHPREFIX’ to ‘PATH’ here.
	* btdt.c: New file.
	* compgate: New file.
	* t010: New file.
	* Makefile.am (check_PROGRAMS): Add btdt.
	(AM_CPPFLAGS, btdt_LDADD): New vars.
	(TESTS_ENVIRONMENT): Don't set ‘PATH’; set ‘PATHPREFIX’.
	(TESTS): Add t010.
	(EXTRA_DIST): Add compgate.
	* README: Mention option ‘COMPONENTS=1’.

2010-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Run xorlf without args.

	* t999: Run xorlf without args.

2010-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Allocate ‘REPO (r)’ also for new repo.

	Omission from 2010-05-24, "Rewrite parsing".
	* Makefile.am (XFAIL_TESTS): Remove t510, t511.

2010-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add some ‘ci -i’ tests; mark them xfail.

	* common (noiselessness_rules, bad_RCSfile): New funcs.
	* common-i: New file.
	* t510: New file.
	* t511: New file.
	* Makefile.am (XFAIL_TESTS): Add t510, t511.
	(TESTS): Add t510, t511.
	(EXTRA_DIST): Add common-i.

2010-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Reorganize tiers.

	* t600: Rename from t500.
	* t601: Rename from t501.
	* t602: Rename from t502.
	* t800: Rename from t700.
	* Makefile.am (XFAIL_TESTS): New var.
	(TESTS): Update.
	* known-failures.in (5.7): Update.
	* README: Update.

2010-10-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Search ‘PATH’ for co / merge at runtime.

	* Makefile.am (check_SCRIPTS): Delete var.
	(PATHPREFIX): Update value.
	(test-prep): Delete target.
	(installcheck-local): Update dependency list.

2010-10-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Avoid ":" as path separator; use $(PATH_SEPARATOR).

	* Makefile.am (TESTS_ENVIRONMENT): Use $(PATH_SEPARATOR).

2010-10-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Overhaul test suite.

	* README: New file.
	* known-failures.in: New file.
	* fake: New directory.
	* fake/empty: New file.
	* fake/empty-minimal: Likewise.