@@ -1,3 +1,10 @@
+2010-10-20  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[v int] Say "commands" instead of "tests" in btdt.c.
+
+	* btdt.c (YEAH): Construct dispatch func
+	name with suffix "_do_it" instead of "_test".
+
 2010-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[v] Add infrastructure for component testing.
